fix word-wrap on show page

--- a/resources/scss/partials/comic.scss
+++ b/resources/scss/partials/comic.scss
@@ -65,6 +65,10 @@
                 color: rgb(92, 92, 92);
                 font-size: 0.85rem;
                 line-height: 1.2rem;
+
+                p {
+                    word-wrap: break-word;
+                }
             }
         }
 
